--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=affiliate.manager
 
-spring.datasource.url=jdbc:mysql://localhost:3306/affilliated-manager?serverTimezone=America/Bogota&useJDBCCompliantTimezoneShift=true
+spring.datasource.url=jdbc:mysql://localhost:3306/affiliated-manager?serverTimezone=America/Bogota&useJDBCCompliantTimezoneShift=true
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -9,5 +9,5 @@ spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 #actualizar base de datos y crear entidades
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 dane.api.url=https://www.datos.gov.co/resource/xdk5-pm3f.json
