--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 #actualizar base de datos y crear entidades
 spring.jpa.hibernate.ddl-auto=update
-dane.api.url=https://www.datos.gov.co/resource/xdk5-pm3f.json
+dane.api.url=https://www.datos.gov.co/resource/xdk5-pm3f.json?$limit=1200
